--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,9 @@ body {
     grid-template-rows: auto 1fr auto;
 }
 
-.main-child1, .main-child3 {
-    background-color: coral;
-}
-
 .main-child2 {
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
     grid-template-columns: 1fr 2fr;
 }
 
@@ -23,22 +19,15 @@ body {
 }
 
 .sub-child1 {
-    grid-row: 1 / 3;
+    grid-row: 1 / 2;
     padding: 1rem;
 }
 
 .sub-child2 {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
-    background-color: crimson;
-}
-
-.sub-child3 {
-    grid-row: 2 / 3;
-    grid-column: 2 / 3;
-    background-color: cyan;
-    display: flex;
-    justify-content: flex-start;
+    background-color: lightgray;
+    min-height: 300px;
 }
 
 nav ul {
